# react-bazel-typescript-sample

./: WORKSPACE  package.json
src/frontend/: BUILD.bazel  app.tsx
src/frontend/friend/: BUILD.bazel  friend.tsx
src/frontend/types/: BUILD.bazel  index.tsx
src/styles/: styles.scss
