package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["friend.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/config",
        "@npm//react",
        "@npm//@types/react",
    ]
)
